# recipe-scraper

./: .gitignore  GEMINI.md  README.md  main.py  pyproject.toml  requirements.txt  scrape-recipe-v1.py  scrape-recipe.py  upload-to-drive.py
